--- a/notes/src/components/styles/home.css
+++ b/notes/src/components/styles/home.css
@@ -13,6 +13,19 @@
     display: flex;
     justify-content: center;
   }
+
+  .btn{
+    width: 100%;
+    height: 20%;
+    margin-top: 30px;
+  }
+
+  .btn button{
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+  }
+
   
   .big{
     font-weight: 500;
